@@ -4,69 +4,90 @@ import commons.Expense;
 import commons.Person;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import server.database.ExpenseRepository;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
 class ExpenseControllerTest {
 
-    private ExpenseController expenseController;
+    private ExpenseController controller;
 
     @Mock
-    private ExpenseRepository expenseRepository;
+    private ExpenseRepository repository;
 
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
-        expenseController = new ExpenseController(expenseRepository);
+        controller = new ExpenseController(repository);
     }
+
 
     @Test
     void addExpense()
     {
-        Expense expense=new Expense(new Person("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
-        ResponseEntity<Void> responseEntity = expenseController.addExpense(expense);
-        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        verify(expenseRepository, times(1)).save(expense);
-        assertEquals(1, expenseController.getAllExpenses().size());
-        assertEquals("Jodie Zhao",expenseController.getAllExpenses().get(0).getPerson());
-        assertEquals(" CSE tution fee",expenseController.getAllExpenses().get(0).getCategory());
-        assertEquals(16000, expenseController.getAllExpenses().get(0).getAmount());
-        assertEquals("EUR", expenseController.getAllExpenses().get(0).getCurrency());
-        assertEquals("2023-08-27", expenseController.getAllExpenses().get(0).getDate());
-        assertEquals(List.of(new Person("Jodie","Zhao")), expenseController.getAllExpenses().get(0).getSplittingOption());
-        assertEquals("Education", expenseController.getAllExpenses().get(0).getExpenseType());
+        Expense expense = new Expense(new Person("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
+
+        when(repository.save(expense)).thenReturn(expense);
+
+        ResponseEntity<Void> response = controller.addExpense(expense);
+
+        verify(repository, times(1)).save(expense);
+
     }
 
     @Test
-    void getAllExpenses() {
-        Expense expense=new Expense(new Person("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
-        when(expenseRepository.findAll()).thenReturn(List.of(expense));
-        assertEquals(List.of(expense), expenseController.getAllExpenses());
+    void getAllExpenses()
+    {
+        Expense expense1=new Expense(new Person("Carlos","Sainz"),"dinner",16000,"EUR","2023-08-31",List.of(new Person("Carlos","Sainz")),"Food");
+        Expense expense2=new Expense(new Person("Steph","Curry"),"dinner",16000,"EUR","2023-08-31",List.of(new Person("Steph","Curry")),"Food");
+        List<Expense> expenses = Arrays.asList(expense1, expense2);
+
+        when(repository.findAll()).thenReturn(expenses);
+
+        List<Expense> result = controller.getAllExpenses();
+
+        verify(repository, times(1)).findAll();
+
+        assertEquals(expenses, result);
+        when(repository.findAll()).thenReturn(expenses);
+        assertEquals(expenses, controller.getAllExpenses());
     }
 
     @Test
-    void filterExpensesByDate() {
+    void filterExpensesByDate()
+    {
+        String date = "2023-08-27";
         Expense expense=new Expense(new Person("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
-        String date="2023-08-27";
-        when(expenseRepository.findAllByDate(date)).thenReturn(List.of(expense));
-        assertEquals(List.of(expense), expenseController.filterExpensesByDate(date));
+        List<Expense> expenses = Arrays.asList(expense);
+
+        when(repository.findAllByDate(date)).thenReturn(expenses);
+
+        List<Expense> result = controller.filterExpensesByDate(date);
+
+        verify(repository, times(1)).findAllByDate(date);
+
+        assertEquals(expenses, result);
     }
 
     @Test
     void addMoneyTransfer()
     {
         Expense transfer = new Expense();
-        ResponseEntity<Void> responseEntity = expenseController.addMoneyTransfer(transfer);
+        ResponseEntity<Void> responseEntity = controller.addMoneyTransfer(transfer);
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        verify(expenseRepository, times(1)).save(transfer);
+        verify(repository, times(1)).save(transfer);
     }
 
     @Test
@@ -74,8 +95,8 @@ class ExpenseControllerTest {
     {
         Expense expense=new Expense(new Person("Jodie","Zhao"),"CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
         Person person=new Person("Jodie","Zhao");
-        when(expenseRepository.findAllByPerson(person)).thenReturn(List.of(expense));
-        assertEquals(List.of(expense), expenseController.filterExpensesByPerson(person));
+        when(repository.findAllByPerson(person)).thenReturn(List.of(expense));
+        assertEquals(List.of(expense), controller.filterExpensesByPerson(person));
     }
 
     @Test
@@ -83,17 +104,60 @@ class ExpenseControllerTest {
     {
         Expense expense=new Expense(new Person("Jodie","Zhao")," CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
         Person person=new Person("Jodie","Zhao");
-        when(expenseRepository.findAllBySplittingOptionContaining(person)).thenReturn(List.of(expense));
-        assertEquals(List.of(expense), expenseController.filterExpensesInvolvingSomeone(person));
+        when(repository.findAllBySplittingOptionContaining(person)).thenReturn(List.of(expense));
+        assertEquals(List.of(expense), controller.filterExpensesInvolvingSomeone(person));
+    }
+
+    @ParameterizedTest
+    @ValueSource(longs = {1L, 2L})
+    public void testGetExpenseDetails(long id) {
+        // Mock data
+        Expense expense = (id == 1) ? new Expense(new Person("Jodie","Zhao")," CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education") : null;
+        Optional<Expense> optionalExpense = Optional.ofNullable(expense);
+
+        when(repository.findById(id)).thenReturn(optionalExpense);
+
+        ResponseEntity<String> response = controller.getExpenseDetails(id);
+
+        verify(repository, times(1)).findById(id);
+
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
+
+        if (optionalExpense.isPresent()) {
+            String expectedResponseBody = "Optional["+optionalExpense.get().toString()+"]"; // Extract Expense from Optional
+            assertEquals(expectedResponseBody, response.getBody());
+        } else {
+            String expectedResponseBody = "Optional.empty";
+            assertEquals(expectedResponseBody, response.getBody());
+        }
+    }
+    @Test
+    public void testUpdateExpense() {
+        long id = 1;
+        Expense updatedExpense = new Expense(new Person("Yanran","Zhao")," CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
+        Expense existingExpense = new Expense(new Person("Jodie","Zhao")," CSE tution fee",16000,"EUR","2023-08-27",List.of(new Person("Jodie","Zhao")),"Education");
+
+        when(repository.findById(id)).thenReturn(Optional.of(existingExpense));
+        when(repository.save(existingExpense)).thenReturn(existingExpense);
+
+        ResponseEntity<Void> response = controller.updateExpense(id, updatedExpense);
+
+        verify(repository, times(1)).findById(id);
+        verify(repository, times(1)).save(existingExpense);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 
     @Test
-    void getExpenseDetails() {
-        long id = 1L;
-        Expense expense = new Expense();
-        when(expenseRepository.findById(id)).thenReturn(expense);
-        ResponseEntity<String> responseEntity = expenseController.getExpenseDetails(id);
-        assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
-        assertEquals(expense.toString(), responseEntity.getBody());
+    public void testDeleteExpense() {
+        long id = 1;
+
+        ResponseEntity<Void> response = controller.deleteExpense(id);
+
+        verify(repository, times(1)).deleteById(id);
+
+        assertEquals(HttpStatus.OK, response.getStatusCode());
     }
 }
+
